...
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LNNAV"
        android:layout_below="@+id/RLHEADER"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
...
                    android:text="@string/click"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/IV_ADMIN_ADD_PRODUCT_IMAGE"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/textView9"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
...
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_NAME"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
...
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_PRICE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
...
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_DESCRIPTION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
...
                        android:layout_marginEnd="15dp"
                        android:padding="15dp"
                        android:spinnerMode="dropdown"
                        android:splitMotionEvents="false" />

                    <Button
                        android:id="@+id/btn_save_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="30dp"
...
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/cart" />

            <ImageButton
                android:id="@+id/btnProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/occasion" />
...
