...
    <string name="View_orders">Orders</string>
    <string name="view_products">Products</string>
    <string name="prod_interface">Products</string>
    <string name="itemNameView">Item Name</string>
    <string name="ItemPriceView">Item Price</string>
    <string name="selectOcassion">Select Occasion</string>
    <string name="prodConfirm">Save</string>
    <string name="occassion1">Valentine\'s Day</string>
    <string name="Occassion2">Birthdays</string>
    <string name="Occassion3">Weddings</string>
    <string name="Occassion4">Promotions</string>
    <string name="Occasion5">Casual Party</string>
    <string name="Occassion6">Bridal Shower</string>
...
    <string name="Available">Available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="EditProducts">Edit Products</string>
    <string name="toblerone">Toblerone Chocolate</string>
    <string name="price">LKR 1250.00</string>
    <string name="removeProd">Remove</string>
    <string name="editProd">Edit</string>
    <string name="AddNew">Add New</string>
    <string name="tvCart">Cart</string>
    <string name="tvOccasion">Occasions</string>
    <string name="Other">Other</string>
    <string name="prodDescription">10 Pcs Pack</string>
    <string name="BuyNow">Buy Now</string>
    <string name="ViewProd">View</string>
...
    <string name="but_credit">Credit card</string>
    <string name="but_cash">Cash on delivery</string>
    <string name="text_name">Customer name</string>
    <string name="tex_address">Address</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_update">Update</string>
    <string name="butn_confirm">Confirm</string>
    <string name="text_confirmpayment">Confirm payment</string>
    <string name="butn_view">View order</string>
    <string name="text_success">Successfully paid....</string>
    <string name="text_terms">Accept terms and condtions</string>
    <string name="text_pmethod">Payment method</string>
    <string name="text_cardnum">Card number</string>
...
