...
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <Spinner
                        android:id="@+id/spinnerEDITProductAvailabiity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:padding="15dp"
                        android:spinnerMode="dropdown"
                        android:splitMotionEvents="false" />

                    <Button
                        android:id="@+id/btn_save_edit_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="30dp"
...
